--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <!-- Used as an example only to position the footer at the end of the page.
     You can delete these styles or move it to your custom css file -->
     <style>
+
       body {
         display: flex;
         min-height: 100vh;
@@ -29,10 +30,10 @@
       <nav class="cyan">
         <div class="nav-wrapper">
           <div class="container">
-            <a href="#" class="brand-logo">LOGO</a>
+            <a href="#" class="brand-logo">Softhealth</a>
             <a href="#" data-activates="mobile-menu" class="button-collapse"><i class="material-icons">menu</i></a>
             <ul class="right hide-on-med-and-down">
-              <li><a href="#">item1</a></li>
+              <li><a href="#"></a></li>
               <li><a href="#">item2</a></li>
               <li><a href="#">item3</a></li>
               <li><a href="#">item4</a></li>
